--- a/css/styles.css
+++ b/css/styles.css
@@ -188,3 +188,160 @@ a.custom-card:hover {
 .checked {
   color: orange;
 }
+/* Empieza el estilo del form de Login*/
+.loginrec {
+  background-color: hwb(191 10% 35%);
+  color: #fff;
+  padding: 7%;  
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+}
+
+.loginrec h4 {
+  font-size: 250%;
+  margin-bottom: 5px 
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch; 
+  width: 100%; 
+}
+.form-space {
+  margin-bottom: 4%;
+}
+
+.login-form input[type="text"],
+.login-form input[type="password"],
+.login-form button {
+  width: 100%;
+  padding: 4%;
+  margin-bottom: 1%; 
+}
+
+.login-form button {
+  background-color: rgb(3, 97, 118);
+}
+/* Termina el estilo del form de login */
+
+ /* Empiezan los estilos de la tabla*/
+
+.pb-5.container, .container {
+  width: 100%;
+  max-width: 100%; 
+  font-family: Verdana, Geneva, Tahoma, sans-serif;  
+
+}
+
+.table {
+  width: 100%; 
+  color: #000000;
+  text-align: left;
+  margin: 0;
+  text-align: center;
+  vertical-align: middle;
+  border-collapse: separate;
+  border-spacing: 0 15px;
+  
+}
+
+.table th {
+  border-left: none;
+  border-right: none;
+  color: rgb(255, 255, 255);
+  background-color: #00ABE4;
+  margin: 0;
+  padding: 0;
+  font-size: 90%;
+  text-shadow: 1px 1px 0px  hwb(0 48% 52%);
+
+}
+
+
+.table td {
+  background-color: hwb(0 91% 9%);
+  font-size: 100%;
+  border-bottom: 1.5px solid #757272; 
+  border-top: 1.5px solid #757272; 
+  
+ 
+}
+
+/* Estilos para cada columna de la 5 a la 1*/
+.table td:nth-child(5) {
+  background-color:  #E9F1FA;
+  text-align: center;
+  border-right:1.5px solid #757272; 
+}
+.table th:nth-child(5) {
+  text-align: center;
+
+  
+}
+
+.table td:nth-child(4) {
+  text-align: center;
+  font-weight: bold;
+  background-color:  hwb(0 100% 0%);
+font-size: larger;  
+  
+}
+.table tbody tr {
+  box-shadow: 3px 3px 3px rgba(30, 55, 90, 0.9);
+}
+.table tbody tr:hover {
+  background-color: #f0f8ff; 
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); 
+  transform: scale(1.03);
+}
+
+
+.table th:nth-child(4) {
+  text-align: center;
+}
+
+.table td:nth-child(3) {
+  background-color:#ffffff;
+  font-size: larger;
+  text-align: left;
+}
+
+.table td:nth-child(2) {
+  text-align: center;
+  background-color:  #E9F1FA;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-shadow: 0px 2px 2px #3e4547; 
+  color:  rgba(30, 55, 90, 0.9);
+  display: auto;
+
+  
+}
+.table th:nth-child(2) {
+  text-align: center;
+  display: auto;
+}
+
+.table td:nth-child(1)  {
+  text-align: center;
+  background-color:  #E9F1FA;
+  border-left:1.5px solid #757272; 
+}
+
+
+/* Estilo para las imágenes dentro de la tabla */
+.table td img {
+  max-width: 350px;
+  max-height: 350px;
+  width: auto;
+  height: auto;
+  display: block;
+  margin: 0;
+  border-radius: 10px;
+  background-color: #E9F1FA;
+  box-shadow: 5px 5px 0px  rgba(30, 55, 90, 0.9);
+}
+
