--- a/css/styles.css
+++ b/css/styles.css
@@ -237,7 +237,7 @@ a.custom-card:hover {
 
 }
 
-.table {
+table {
   width: 100%; 
   color: #000000;
   text-align: left;
@@ -249,7 +249,7 @@ a.custom-card:hover {
   
 }
 
-.table th {
+table th {
   border-left: none;
   border-right: none;
   color: rgb(255, 255, 255);
@@ -265,7 +265,7 @@ a.custom-card:hover {
 }
 
 
-.table td {
+table td {
   background-color: hwb(0 91% 9%);
   font-size: 100%;
   border-bottom: 1.5px solid #757272; 
@@ -275,45 +275,45 @@ a.custom-card:hover {
 }
 
 /* Estilos para cada columna de la 5 a la 1*/
-.table td:nth-child(5) {
+table td:nth-child(5) {
   background-color:  #E9F1FA;
   text-align: center;
   border-right:1.5px solid #757272; 
 }
-.table th:nth-child(5) {
+table th:nth-child(5) {
   text-align: center;
 
   
 }
 
-.table td:nth-child(4) {
+table td:nth-child(4) {
   text-align: center;
   font-weight: bold;
   background-color:  hwb(0 100% 0%);
 font-size: larger;  
   
 }
-.table tbody tr {
+table tbody tr {
   box-shadow: 3px 3px 3px rgba(30, 55, 90, 0.9);
 }
-.table tbody tr:hover {
+table tbody tr:hover {
   background-color: #f0f8ff; 
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); 
   transform: scale(1.03);
 }
 
 
-.table th:nth-child(4) {
+table th:nth-child(4) {
   text-align: center;
 }
 
-.table td:nth-child(3) {
+table td:nth-child(3) {
   background-color:#ffffff;
   font-size: larger;
   text-align: left;
 }
 
-.table td:nth-child(2) {
+table td:nth-child(2) {
   text-align: center;
   background-color:  #E9F1FA;
   font-size: 1.5rem;
@@ -324,12 +324,12 @@ font-size: larger;
 
   
 }
-.table th:nth-child(2) {
+table th:nth-child(2) {
   text-align: center;
   display: auto;
 }
 
-.table td:nth-child(1)  {
+table td:nth-child(1)  {
   text-align: center;
   background-color:  #E9F1FA;
   border-left:1.5px solid #757272; 
@@ -337,7 +337,7 @@ font-size: larger;
 
 
 /* Estilo para las imágenes dentro de la tabla */
-.table td img {
+table td img {
   max-width: 350px;
   max-height: 350px;
   width: auto;
