--- a/css/styles.css
+++ b/css/styles.css
@@ -189,56 +189,60 @@ a.custom-card:hover {
   color: orange;
 }
 /* Empieza el estilo del form de Login*/
-.loginrec {
+.form-container {
   background-color: hwb(191 10% 35%);
   color: #fff;
-  padding: 7%;  
-  max-width: 400px;
-  margin: 0 auto;
-  text-align: center;
-  width: 100%;
+  padding: 20px; 
+  max-width: 400px; 
+  margin: auto; 
+  min-width: 200px;
 }
 
-.loginrec h4 {
-  font-size: 200%;
-  margin-bottom: 5px; 
+.titulodeform {
+  font-size: 2rem;
+  margin-bottom: 15px; 
   text-align: center;
+  display: block; 
 }
 
 .login-form {
   display: flex;
   flex-direction: column;
   align-items: stretch; 
-  width: 100%; 
+  width: 100%;
 }
+
 .form-space {
-  margin-bottom: 4%;
+  margin-bottom: 10px; 
 }
 
 .login-form input[type="text"],
 .login-form input[type="password"],
 .login-form button {
   width: 100%;
-  padding: 4%;
-  margin-bottom: 1%; 
+  padding: 10px; 
+  margin-bottom: 10px; 
 }
 
 .login-form button {
   background-color: rgb(3, 97, 118);
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  display: block;
+  min-width: 100px;
 }
-/* Termina el estilo del form de login */
 
- /* Empiezan los estilos de la tabla*/
-
+/* Estilos de la tabla */
 .pb-5.container, .container {
   width: 100%;
-  max-width: 100%; 
-  font-family: Verdana, Geneva, Tahoma, sans-serif;  
-
+  max-width: 100%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 table {
-  width: 100%; 
+  width: 100%;
   color: #000000;
   text-align: left;
   margin: 0;
@@ -246,7 +250,7 @@ table {
   vertical-align: middle;
   border-collapse: separate;
   border-spacing: 0 15px;
-  
+  font-size: 1.5vw;
 }
 
 table th {
@@ -256,25 +260,21 @@ table th {
   margin: 0;
   padding: 0;
   font-size: 90%;
-  text-shadow: 1px 1px 0px  hwb(0 48% 52%);
-
+  text-shadow: 1px 1px 0px hwb(0 48% 52%);
 }
 
 .container table th {
-  background-color: #00ABE4; 
+  background-color: #00ABE4;
 }
-
 
 table td {
   background-color: hwb(0 91% 9%);
   font-size: 100%;
-  border-bottom: 1.5px solid #757272; 
-  border-top: 1.5px solid #757272; 
-  
- 
+  border-bottom: 1.5px solid #757272;
+  border-top: 1.5px solid #757272;
 }
 
-/* Estilos para cada columna de la 5 a la 1*/
+
 table td:nth-child(5) {
   background-color:  #E9F1FA;
   text-align: center;
@@ -316,7 +316,7 @@ table td:nth-child(3) {
 table td:nth-child(2) {
   text-align: center;
   background-color:  #E9F1FA;
-  font-size: 1.5rem;
+  font-size: 2.5vw;
   font-weight: bold;
   text-shadow: 0px 2px 2px #3e4547; 
   color:  rgba(30, 55, 90, 0.9);
@@ -327,6 +327,7 @@ table td:nth-child(2) {
 table th:nth-child(2) {
   text-align: center;
   display: auto;
+
 }
 
 table td:nth-child(1)  {
@@ -336,16 +337,14 @@ table td:nth-child(1)  {
 }
 
 
-/* Estilo para las imágenes dentro de la tabla */
+
 table td img {
-  max-width: 350px;
-  max-height: 350px;
-  width: auto;
-  height: auto;
-  display: block;
-  margin: 0;
+  max-width: 100%; 
+  height: auto; 
+  display: block; 
+  margin: 0 auto; 
   border-radius: 10px;
   background-color: #E9F1FA;
   box-shadow: 5px 5px 0px  rgba(30, 55, 90, 0.9);
+  min-width: 30px;
 }
-
