--- a/css/styles.css
+++ b/css/styles.css
@@ -337,14 +337,14 @@ table td:nth-child(1)  {
 }
 
 
-
 table td img {
-  max-width: 100%; 
-  height: auto; 
+  width: 100%; /* Mantiene la imagen responsive */
+  max-width: 150px; /* Aumenta el tamaño máximo */
+  height: auto; /* Mantiene la relación de aspecto */
   display: block; 
   margin: 0 auto; 
   border-radius: 10px;
   background-color: #E9F1FA;
-  box-shadow: 5px 5px 0px  rgba(30, 55, 90, 0.9);
-  min-width: 30px;
+  box-shadow: 5px 5px 0px rgba(30, 55, 90, 0.9);
+  min-width: 200px; /* Aumenta el tamaño mínimo */
 }
