--- a/css/styles.css
+++ b/css/styles.css
@@ -338,13 +338,13 @@ table td:nth-child(1)  {
 
 
 table td img {
-  width: 100%; /* Mantiene la imagen responsive */
-  max-width: 150px; /* Aumenta el tamaño máximo */
-  height: auto; /* Mantiene la relación de aspecto */
+  width: 100%; 
+  max-width: 150px; 
+  height: auto; 
   display: block; 
   margin: 0 auto; 
   border-radius: 10px;
   background-color: #E9F1FA;
   box-shadow: 5px 5px 0px rgba(30, 55, 90, 0.9);
-  min-width: 200px; /* Aumenta el tamaño mínimo */
+  min-width: 200px; 
 }
