--- a/css/styles.css
+++ b/css/styles.css
@@ -664,7 +664,7 @@ label {
   color: white; 
   border: none;
   border-radius: 4px; 
-  cursor: pointer; /* Cambia el cursor al pasar por encima */
+  cursor: pointer; 
   transition: background-color 0.3s; 
 }
 
@@ -713,7 +713,7 @@ label {
 }
 
 .form-check-input:checked {
-  background-color: #007bff; /* Cambiar color cuando está activo */
+  background-color: #007bff; 
 }
 
 
@@ -729,53 +729,53 @@ body.dark-mode .navbar {
 
 /* ENTREGA 5 estilos para el div de los datos display */
 #profile-section {
-  display: flex; /* Usar flexbox para alinear el perfil y el formulario */
-  flex-direction: column; /* Mantener los elementos en columna */
-  align-items: center; /* Centra los elementos horizontalmente */
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
 }
 
 #profileinfo {
-  background-color: #d7e5f3; /* Fondo celeste */
-  border-radius: 8px; /* Bordes redondeados */
-  padding: 20px; /* Espacio interno */
-  max-width: 600px; /* Ancho máximo del contenedor */
-  width: 100%; /* Asegura que ocupe el ancho completo */
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra */
-  margin-bottom: 20px; /* Espacio debajo del perfil */
-  margin-top: 20px; /* Espacio en la parte superior */
+  background-color: #d7e5f3; 
+  border-radius: 8px; 
+  padding: 20px; 
+  max-width: 600px;
+  width: 100%;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px; 
+  margin-top: 20px; 
 }
 
 .profile-pic-container {
-  text-align: center; /* Centra la imagen de perfil */
-  margin-bottom: 15px; /* Espacio debajo de la imagen */
+  text-align: center; 
+  margin-bottom: 15px; 
 }
 
 .profile-pic-container img {
-  width: 50%; /* Ajusta el ancho de la imagen al tamaño del contenedor */
-  height: auto; /* Mantiene la proporción de la imagen */
-  border-radius: 10px; /* Bordes redondeados */
+  width: 50%; 
+  height: auto;
+  border-radius: 10px; 
 }
 
 #profile-details {
-  display: grid; /* Usar grid para organizar en columnas */
+  display: grid; 
   grid-template-columns: repeat(2, 1fr);
   gap: 10px; 
 }
 
 .fila-profile {
-  display: flex; /* Usar flexbox para alinear los elementos */
-  flex-direction: column; /* Alinear en columna para etiquetas y valores */
+  display: flex; 
+  flex-direction: column; 
 }
 
 .fila-profile strong {
-  margin-bottom: 5px; /* Espacio entre la etiqueta y el valor */
-  text-align: left; /* Alinea la etiqueta a la izquierda */
+  margin-bottom: 5px; 
+  text-align: left; 
   color: #343a40;
 }
 
 body.dark-mode .jumbotron {
   background-color: #1a1a1a;
-  background-image: none; /* O puedes mantener la imagen pero oscurecerla */
+  background-image: none; 
   color: white;
 }
 
@@ -792,18 +792,23 @@ body.dark-mode .btn {
 }
 
 body.dark-mode #tinfoprod .header-description  {
-  border: 1px solid white; /* Borde blanco en Modo Noche */
+  border: 1px solid white; 
 }
 
 body.dark-mode .fila-profile span {
-  background-color: #181818; /* Fondo oscuro en modo oscuro */
-  color: white; /* Color del texto en modo oscuro */
+  background-color: #343a40; 
+  color: white; 
+}
+
+body.dark-mode #profile-form input {
+  background-color: #343a40; 
+  color: white; 
 }
 
 .fila-profile span {
   text-align: left; 
-  background-color: rgb(255, 255, 255); /* Fondo blanco para el span */
-  border: 1px solid blue; /* Borde azul */
+  background-color: rgb(255, 255, 255);
+  border: 1px solid blue; 
   border-radius: 4px; 
   padding: 5px; 
 }
@@ -836,8 +841,9 @@ body.dark-mode .fila-profile span {
   font-weight: bold; 
   margin-bottom: 5px;
   display: block;
-  color: white;
+  color: #343a40
 }
+
 
 #profile-form input {
   width: 100%; 
